--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -333,6 +333,7 @@
     "FetchCountryError": "An error occurred while fetching countries",
     "FetchNominalVoltagesError": "An error occurred while fetching nominal voltages",
     "FetchVoltageLevelsError": "An error occurred while fetching voltage levels",
+    "FetchHvdcLineWithShuntCompensatorsError": "An error occurred while fetching HVDC lines and related shunt compensators",
     "DynamicSimulationEventPropertyTEvent": "Event Time",
     "DynamicSimulationEventPropertySide": "Only Side",
     "DynamicSimulationEventPropertyNodeFaultDuration": "Node Fault Duration",
