--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -331,6 +331,7 @@
     "FetchCountryError": "Une erreur est survenue lors du chargement des pays",
     "FetchNominalVoltagesError": "Une erreur est survenue lors du chargement des tensions nominales",
     "FetchVoltageLevelsError": "Une erreur est survenue lors du chargement des postes",
+    "FetchHvdcLineWithShuntCompensatorsError": "Une erreur est survenue lors du chargement des lignes HVDC et des MCS associés",
     "DynamicSimulationEventPropertyTEvent": "Temps de l'événement",
     "DynamicSimulationEventPropertySide": "Uniquement Côté",
     "DynamicSimulationEventPropertyNodeFaultDuration": "Durée du court-circuit",
