[Dynamic Margin Calculation] Functional implementation (#3669)
Following features are implemented

    Run button for DMC
    Parameters for DMC
    Logs of result
    Debug support (Ctrl + click launch)

---------

Signed-off-by: Thang PHAM <phamthang37@gmail.com>
Co-authored-by: FranckLecuyer <47824306+FranckLecuyer@users.noreply.github.com>

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -363,6 +363,11 @@
     "DynamicSecurityAnalysisContingenciesStartTime": "Contingencies start time",
     "DynamicSecurityAnalysisTabStatus": "Status",
 
+    "startDynamicMarginCalculationError": "An error occurred while starting the dynamic margin calculation",
+    "DynamicMarginCalculation": "Dynamic margin calculation",
+    "DynamicMarginCalculationRunError": "An error occurred while executing the dynamic margin calculation",
+    "DynamicMarginCalculationTabStatus": "Status",
+
     "TwoSides.ONE": "Origin side",
     "TwoSides.TWO": "Extremity side",
 
