--- a/src/translations/fr.json
+++ b/src/translations/fr.json
@@ -361,6 +361,11 @@
     "DynamicSecurityAnalysisContingenciesStartTime": "Temps de début des aléas",
     "DynamicSecurityAnalysisTabStatus": "Statut",
 
+    "startDynamicMarginCalculationError": "Une erreur est survenue lors du lancement du calcul de marge dynamique",
+    "DynamicMarginCalculation": "Calcul de marge dynamique",
+    "DynamicMarginCalculationRunError": "Une erreur est survenue lors de l'exécution du calcul de marge dynamique",
+    "DynamicMarginCalculationTabStatus": "Statut",
+
     "TwoSides.ONE": "Côté 1",
     "TwoSides.TWO": "Côté 2",
 
